# graph-algebra

./: Graph.hs  PartialOrder.hs  README.md  Relation.hs  Test.hs  graph-algebra.cabal
src/: Basic.hs  Concept.hs  Demo.hs  Graph.hs  PG.hs  PartialOrder.hs  Relation.hs
test/: Concepts.hs  Processor.hs  Switches.hs  Test.hs  TestCircuit.hs  TestCommandLine.hs  TestConcept.hs  TestProcessor.hs
