name:          graph-algebra
version:       0.0.1
synopsis:      A simple graph algebra
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2016
homepage:      https://github.com/snowleopard/graph-algebra
category:      Algebra
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/snowleopard/graph-algebra.git

library
    hs-source-dirs:   src
    exposed-modules:  Graph,
                      PartialOrder,
                      PG,
                      Relation
    build-depends:    base       >= 4.8 && < 5,
                      containers == 0.5.*,
                      mtl        == 2.2.*,
                      pretty     == 1.1.*,
                      QuickCheck >= 2.6 && < 2.9
    default-language: Haskell2010
    other-extensions: DeriveFunctor,
                      DeriveFoldable,
                      DeriveTraversable
                      FlexibleInstances
    GHC-options:      -O2 -Wall -fwarn-tabs

test-suite test-library
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4.8 && < 5,
                      QuickCheck >= 2.6 && < 2.9,
                      graph-algebra
    default-language: Haskell2010
    GHC-options:      -O2 -Wall -fwarn-tabs

test-suite test-processor
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Processor.hs
    build-depends:    base   >= 4.8 && < 5,
                      pretty == 1.1.*,
                      graph-algebra
    default-language: Haskell2010
    GHC-options:      -O2 -Wall -fwarn-tabs

test-suite test-concepts
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Concepts.hs
    build-depends:    base       >= 4.8 && < 5,
                      pretty     == 1.1.*,
                      QuickCheck >= 2.6 && < 2.9,
                      graph-algebra
    default-language: Haskell2010
    GHC-options:      -O2 -Wall -fwarn-tabs

test-suite test-switches
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Switches.hs
    build-depends:    base       >= 4.8 && < 5,
                      pretty     == 1.1.*,
                      QuickCheck >= 2.6 && < 2.9,
                      graph-algebra
    default-language: Haskell2010
    GHC-options:      -O2 -Wall -fwarn-tabs
